# putao

./: .gitignore  LICENSE  README.md  putao.py  pyproject.toml
examples/: bad_apple.json  bad_apple.mml  chord.py  create_voicebank.py  create_wav.py  megalovania.json  megalovania.mml  megalovania.txt  putao.json  render.py  render.sh  test.json  test.py  tune_sample.py  unravel.mml  voicebank.json
putao/: __init__.py  __main__.py  __version__.py  cli.py  core.py  exceptions.py  internal.py  model.py  project.py  utau.py  utils.py  voicebank.py
putao.bak/: __version__.py  core.py  exceptions.py  note.py  ust.py  utau.py  utils.py
putao.bak/resampler/: __init__.py  base.py
putao/backend/: __init__.py  mid.py  midi.py  midi2.py  mml.py  mml.py.bak  mmlx.py
putao/compat/: utau.py
putao/oto/: frq.py  ini.py  sample.py  voicebank.py
putao/resamplers/: __init__.py  base.py  world.py
putao/source/: __init__.py  mid.py  mml.py  reg.py  source.py
src/putao/: __init__.py  audio.py  cache.py  cli.py  core.py  ini.py  jsonclasses.py  model.py  utau.py
src/putao/cli/: __init__.py  main.py  utils.py  voicebank.py
src/putao/oto/: __init__.py  cache.py  frq.py  ini.py  pitch.py  sample.py  voicebank.py
src/putao/resampler/: __init__.py  base.py  pyin.py  world.py
src/putao/resamplers/: world.py
src/putao/source/: mml.py
src/putao/synth/: __init__.py  base.py  default.py
src/putao/ust/: __init__.py  _conv.py  ini.py  note.py  settings.py  song.py
src/putao/wavtool/: __init__.py  base.py  librosa.py
tests/: test_audio.py  test_ini.py
tests/backend/: test_mmlx.py
tests/oto/: test_frq.py  test_ini.py  test_pitch.py  test_sample.py  test_voicebank.py
tests/ust/: test_ini.py  test_note.py  test_song.py
typings/: pyworld.pyi
