[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "putao"
dynamic = ["version"]
description = "Concatenative synthesizer inspired by UTAU"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["synthesis", "utau"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]
dependencies = [
    "cattrs~=23.1.2",
    "chardet~=5.2.0",
    "librosa~=0.10.0",
    # librosa depends on numba which requires a specific version of numpy.
    # If a newer version is specified, numba has to be built from source
    # instead of installed via a binary wheel.
    "numpy>=1.24",
    "pyworld~=0.3.4",
    "soundfile~=0.12.1",
    "typer[all]~=0.9.0"
]

[[project.authors]]
name = "Ong Yong Xin"
email = "ongyongxin2020+github@gmail.com"

[project.urls]
"Source code" = "https://github.com/ongyx/putao"

[project.scripts]
putao = "putao.cli.main:app"

[tool.hatch.version]
path = "src/putao/__init__.py"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "coverage"
]
