[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "putao"
dynamic = ["version"]
description = "Poor man's UTAU"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["synthesis", "utau"]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]
dependencies = [
    "chardet~=5.2.0",
    "click~=8.1.7",
    "coloredlogs~=15.0.1",
    "mido~=1.3.0",
    "numpy~=1.26.4",
    "pydub~=0.25.1",
    "pyparsing~=3.1.4",
    "pyworld~=0.3.4",
    "soundfile~=0.12.1",
    # Here because pyworld needs to access pkg_resources.
    "setuptools"
]

[[project.authors]]
name = "Ong Yong Xin"
email = "ongyongxin2020+github@gmail.com"

[project.urls]
"Source code" = "https://github.com/ongyx/putao"

[project.scripts]
putao = "putao.cli:cli"

[tool.hatch.version]
path = "putao/__version__.py"

[tool.hatch.envs.test]
dependencies = [
    "pytest"
]

[tool.hatch.metadata]
allow-direct-references = true